# openchat-client

./: Cargo.toml  README.md
docs/: index.html
src/: app.rs  lib.rs  main.rs
