[package]
name = "client"
default-run = "client_bin"
version = "0.1.0"
authors = ["may"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "client_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0" }
tokio = { version = "1.0.0", features = ["full"] }
tungstenite = "0.17.2"
tokio-tungstenite = "*"
futures-util = { version = "0.3", features = ["sink", "std"] }
futures-channel = "*"
url = "2.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2

[patch.crates-io]
